clusters/cluster1/kubernetes/apps/matrix/livekit/app/lk-jwt-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lk-jwt-service
  namespace: matrix
  labels:
    app.kubernetes.io/name: lk-jwt-service
spec:
  selector:
    app.kubernetes.io/name: lk-jwt-service
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
